--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -8,4 +8,4 @@ cron_day: 1
 
 
 certificate_email: acme@hoprnet.org
-full_chain_private_key_path: "/etc/letsencrypt/live/{{ certificate_domain_name }}/private-key-cert.pem"  
+full_private_key_path: "/etc/letsencrypt/live/{{ certificate_domain_name }}/private-key-cert.pem"
