--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -14,8 +14,8 @@
   gather_facts: true
   tasks:
     - name: Is running on Github
-      local_action:
-        module: ansible.builtin.set_fact
+      delegate_to: localhost
+      ansible.builtin.set_fact:
         github_execution: "{{ lookup('env', 'RUNNING_ON_GITHUB') }}"
     - name: "Install certbot"
       ansible.builtin.include_role:
